<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="150dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/ic_nike_logo"
            app:lottie_rawRes="@raw/final2"
            app:lottie_autoPlay="true"
            app:lottie_repeatCount="0"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/loginScreenTitle"
            android:textSize="18sp"
            android:textColor="?colorOnBackground"
            android:textStyle="bold"
            android:fontFamily="@font/vazir_bold"
            android:textAppearance="?textAppearanceHeadline5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/Body1"
            android:text="@string/authHint" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableEnd="@drawable/ic_outline_email_24"
            android:gravity="right|center_vertical"
            android:inputType="textEmailAddress"
            style="@style/Theme.Nike.AuthTheme.EditText"
            android:hint="@string/email" />


            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="@dimen/authViewWidth"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/eyepassword"
                android:gravity="right|center_vertical"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"
                style="@style/Theme.Nike.AuthTheme.EditText"
                android:hint="@string/password" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/loginTitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:textAppearance="@style/Body1"
            android:text="@string/signUpHint" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpLinkBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir_bold"
            android:text="@string/signUp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>