<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editImage"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/Avatar"
                app:srcCompat="@drawable/ic_nike_logo"
                app:strokeColor="?dividerColor"
                app:strokeWidth="1dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/usernameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?textAppearanceBody1"
            tools:text="@string/guest_user"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="16dp"
            android:divider="@drawable/shape_divider"
            android:showDividers="middle|beginning|end"
            android:orientation="vertical">
            <TextView
                android:id="@+id/favoriteSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ProfileLinks"
                android:text="@string/favorites"
                app:drawableStartCompat="@drawable/ic_favorites" />

            <TextView
                android:id="@+id/order_His"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ProfileLinks"
                android:text="@string/orderHistory"
                app:drawableStartCompat="@drawable/ic_order_history" />

            <TextView
                android:id="@+id/authBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ProfileLinks"
                android:text="@string/signIn"
                app:drawableStartCompat="@drawable/ic_sign_in" />
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>